# android-dev-scripts

./: .gitignore  README.md  fdroid_setup.py  generate-metadata.py  generate_docs.py  kt-refactor.py  pyproject.toml
android_dev_tools/: create_android_project.py  fdroid_setup.py  generate_metadata.py  generate_web.py
docs/: app-icon-generator.md  create-android-project.md  fdroid-setup.md  generate-metadata.md  generate-web.md  kt-refactor.md  mastodon-tuter.md  mastodon_tuter.md  material-icons-android-importer.md  yaml-translations.md
